# chaos-rs

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/start/: start.slint
